<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">InstallUpdateTestApp</string>
    <string name="action">Action</string>
    <string name="content_path">Content Path</string>
    <string name="default_action">android.intent.action.UPDATE_TZDATA</string>
    <string name="default_content_path">/data/local/tmp/out.zip</string>
    <string name="default_required_hash">NONE</string>
    <string name="default_version">1</string>
    <string name="required_hash">Required Hash</string>
    <string name="trigger_install">Trigger Install</string>
    <string name="version">Version</string>
</resources>
